styles.css
@import url('https://fonts.googleapis.com/css?family=Cabin&display=swap');


body {
    font-family: 'Cabin', sans-serif;
    margin: 0;
    padding: 0;
    display: flex;
}

.sideDiv {
    padding-top: 0;
    padding-left: 0;
    width: 40%;
    background-image: url(./images/cobblestonestreet.jpg);
    background-size: cover;
    height:100vh;
    display: flex;
    flex-direction: column;
}

.sideBackFilter{
    background-color: rgba(0, 0, 0, 0.15);
    display: flex;
    flex-direction: column;
    min-width: 100%;
    min-height: 100%
}

.sideBackFilter img {
    margin-top: 20%;
    margin-bottom: auto;
    align-self: center;
    max-width: 150px;
    max-height: 150px;
    
    
}

a { 
    color: black;
}

.sideCredit{
    font-size: 10px;
    align-self: center;
    justify-self: end;
    color: rgb(0, 0, 0);
    margin-top: 5%;
}

.mainFormDiv {
    display: flex;
    background-color: rgba(10, 10, 58, 0.1);
    width: 60%;
    height: 100vh;
}

